--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-    "name": "third",
-    "version": "1.0.0",
-    "description": "This plugin template uses Typescript. If you are familiar with Javascript, Typescript will look very familiar. In fact, valid Javascript code is already valid Typescript code.",
-    "main": "code.js",
-    "dependencies": {
-        "css-loader": "^6.0.0",
-        "figma-styled-components": "^2.0.0",
-        "html-webpack-inline-source-plugin": "^0.0.10",
-        "html-webpack-plugin": "^5.0.0",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "react-treebeard": "^3.2.4",
-        "style-loader": "^3.0.0",
-        "styled-components": "^6.0.0",
-        "three": "^0.160.0",
-        "ts-loader": "^9.0.0",
-        "typescript": "^5.0.0",
-        "url-loader": "^4.0.0",
-        "webpack": "^5.0.0",
-        "webpack-cli": "^5.0.0"
-    },
-    "devDependencies": {
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0"
-    },
-    "scripts": {
-        "start": "npx webpack --mode=development --watch",
-        "build": "npx webpack"
-    },
-    "author": "",
-    "license": "ISC"
+  "name": "third",
+  "version": "1.0.0",
+  "description": "This plugin template uses Typescript. If you are familiar with Javascript, Typescript will look very familiar. In fact, valid Javascript code is already valid Typescript code.",
+  "main": "code.js",
+  "dependencies": {
+    "css-loader": "^6.0.0",
+    "figma-styled-components": "^2.0.0",
+    "html-webpack-plugin": "^5.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-treebeard": "^3.2.4",
+    "style-loader": "^3.0.0",
+    "styled-components": "^6.0.0",
+    "three": "^0.160.0",
+    "ts-loader": "^9.0.0",
+    "typescript": "^5.0.0",
+    "url-loader": "^4.0.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "html-inline-script-webpack-plugin": "^3.2.1"
+  },
+  "scripts": {
+    "start": "npx webpack --mode=development --watch",
+    "build": "npx webpack"
+  },
+  "author": "",
+  "license": "ISC"
 }
