--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "code.js",
   "dependencies": {
     "css-loader": "^6.0.0",
-    "figma-styled-components": "^2.0.0",
+    "figma-styled-components": "2.1.0",
     "html-webpack-plugin": "^5.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
     "react-treebeard": "^3.2.4",
     "style-loader": "^3.0.0",
-    "styled-components": "^6.0.0",
+    "styled-components": "5.0.1",
     "three": "^0.160.0",
     "ts-loader": "^9.0.0",
     "typescript": "^5.0.0",
@@ -20,8 +20,8 @@
     "webpack-cli": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "16.8.0",
+    "@types/react-dom": "16.8.0",
     "html-inline-script-webpack-plugin": "^3.2.1"
   },
   "scripts": {
